--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist --cname kmads.dev"
   },
   "dependencies": {
     "react": "^18.3.1",
