--- a/docs/package.json
+++ b/docs/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build && echo 'kmads.dev' > dist/CNAME",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build && echo kmads.dev > dist/CNAME",
+    "deploy": "gh-pages -d dist --cname kmads.dev --nojekyll"
   },
   "dependencies": {
     "react": "^18.3.1",
