--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 node_modules/
+docs/node_modules/
 dist/
 dist-ssr/
-*.local
+docs/dist/
+docs/dist-ssr/
+package-lock.json
+*.log
+npm-debug.log*
+yarn-debug.log*
+.idea/
 .DS_Store
 .env
-docs/node_modules/
-docs/dist/
+*.local
+.gh-pages/
