--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist --cname kmads.dev --nojekyll"
   },
   "dependencies": {
+    "lenis": "^1.3.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
